- [SmarterMail100] Fix for suspending hosting space in SolidCP not causing domain to be disabled.
- [SmarterMail100] Fix for Deleting Space and/or User Account in SCP does not remove the domain off the SM server
- [SmarterMail100] Fixed creating groups
- [SmarterMail100] Added tinymce to the Signature and Autoresponder messages so they can be html when using latest SmarterMail


Version 1.4.9
- Smartermail100 (Latest API) - Work sponsored by Enterprise Guardian Inc.
- MFA Implementation -bluechip
- Removing Server ASP.Net2
- Theme setting changes & reset button for themes.
- Added Powershell script version to loading screen
- Remove validator from mailbox plan selector - bug with create / remove org. user if no maibox plans are available - bluechip
- Bug with "Mailboxes" and "Journaling Maiboxes" menu items fixed - bluechip
- [VirtualizationServerController2012] Attempt to fix a rare issue where a VM cannot be created for no reason -berkut1
- fix issue where shortdomain is sometimes wrongly determined -berkut1
- Templates - Give feedback to user when irregularities are detected -robsiera 
- improve feedback on RDS, AD -robsiera
- Add new Username pattern. Based on Standard, but add counter to duplicates instead of using AppendOrgId -robsiera
- Fixed build issue with MSDNS 2016
- Shared Folders - Trim folder name -bluechip
- Use FileSystemObject for shared folders deleting (no 260 characters limit) -bluechip
- Updated to RestSharp.106.12.0
- Fix for MailCleaner - delete domain -bluechip
- [HyperV2012R2+] Configuring external / private IPs after the adapter added -bluechip
- [HyperV2012R2+] Save private and external network VLANs -bluechip
- Fix for journaling mailboxes -bluechip
- [HyperV2012R2+] Added - support for automatic detection of VM configuration versions -berkut1
- [HyperV2012R2+] Shows a more convenient and correct progress bar status when installing virtual machines. (useful for for third party services) -berkut1